# gw-basic-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  check.cpp  test_snake.cpp
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: Doxygen.cmake  StaticAnalysis.cmake
docs/: Doxyfile.in  analysis.md  compatibility.md
examples/: README.md  circles.bas  commander.bas  easter.bas  pi_pixel.bas  raycast.bas  sincos.bas  snake.bas  tan_graph.bas
include/gwbasic/: ast.hpp  graphics_presenter.hpp  interpreter.hpp  lexer.hpp  parser.hpp  runtime.hpp  token.hpp  value.hpp
src/: ast.cpp  graphics_presenter.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  runtime.cpp  token.cpp  value.cpp
tests/: compatibility_tests.cpp  fuzz_lexer_parser.cpp  lexer_tests.cpp  parser_tests.cpp  smoke.cpp
