cmake_minimum_required(VERSION 3.21)
project(gwbasic_modern VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
option(GWBASIC_BUILD_TESTS "Build tests" ON)
add_library(gwbasic_core src/token.cpp src/lexer.cpp src/ast.cpp src/parser.cpp src/value.cpp src/runtime.cpp src/interpreter.cpp src/graphics_presenter.cpp)
target_include_directories(gwbasic_core PUBLIC include)
if(WIN32)
  target_link_libraries(gwbasic_core PRIVATE d3d11 dxgi dxguid d3dcompiler)
elseif(UNIX AND NOT APPLE)
  find_package(X11 REQUIRED)
  target_link_libraries(gwbasic_core PRIVATE X11::X11 dl)
endif()
if(MSVC)
  target_compile_options(gwbasic_core PRIVATE /W4 /permissive-)
else()
  target_compile_options(gwbasic_core PRIVATE -Wall -Wextra -Wpedantic)
endif()
add_executable(gwbasic src/main.cpp)
target_link_libraries(gwbasic PRIVATE gwbasic_core)
if(GWBASIC_BUILD_TESTS)
  enable_testing()
  add_executable(gwbasic_smoke tests/smoke.cpp)
  target_link_libraries(gwbasic_smoke PRIVATE gwbasic_core)
  add_test(NAME smoke COMMAND gwbasic_smoke)
endif()
